--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,11 +7,22 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "nest start",
+    "start:dev": "nest start --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.4",
+    "@nestjs/platform-fastify": "^11.0.10",
+    "@nestjs/schematics": "^11.0.1",
+    "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.0.10",
+    "@nestjs/core": "^11.0.10",
+    "reflect-metadata": "^0.2.2"
   }
 }
