--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -19,5 +19,6 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": ["src", "*.js", "*.ts"]
 }
