--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@repo/eslint-config": "^1.0.0",
+    "@types/eslint__eslintrc": "^2.1.2",
     "@types/react": "19.0.10",
     "eslint": "^9.20.1",
+    "eslint-config-next": "15.1.7",
     "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
