--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "test:coverage": "vitest run --coverage"
+    "lint": "npm run lint -w apps"
   },
   "keywords": [],
   "author": "",
