--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches: [main]
 
 defaults:
   run:
-    shell: bash
     working-directory: ./docs
+
 jobs:
   build:
     name: Build Docusaurus
@@ -32,20 +34,20 @@ jobs:
         with:
           path: build
 
-  deploy:
-    name: Deploy to GitHub Pages
-    needs: build
+  # deploy:
+  #   name: Deploy to GitHub Pages
+  #   needs: build
 
-    permissions:
-      pages: write
-      id-token: write
+  #   permissions:
+  #     pages: write
+  #     id-token: write
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
 
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       uses: actions/deploy-pages@v4
