tsconfigの設定追加

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -16,6 +16,7 @@
     "skipLibCheck": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
+    "noUncheckedIndexedAccess": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
