環境変数の呼び出し修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,8 @@ jobs:
           echo "api_changed: ${api_changed}"
 
            # 変更があった場合に環境変数に設定
-          echo "web_changed=${web_changed}" >> "$GITHUB_ENV"
-          echo "api_changed=${api_changed}" >> "$GITHUB_ENV"
+          echo "web_changed=${web_changed}" >> $GITHUB_ENV
+          echo "api_changed=${api_changed}" >> $GITHUB_ENV
 
   debug:
     needs: setup
