--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,6 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
-    outputs:
-      web_changed: ${{ steps.detect_changes.outputs.web_changed }}
-      api_changed: ${{ steps.detect_changes.outputs.api_changed }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,11 +42,20 @@ jobs:
       - name: Detect changed files
         id: detect_changes
         run: |
-          echo "web_changed=$(git diff --name-only origin/main...HEAD | grep -E '^apps/web/' || echo "")" >> $GITHUB_OUTPUT
-          echo "api_changed=$(git diff --name-only origin/main...HEAD | grep -E '^apps/api/' || echo "")" >> $GITHUB_OUTPUT
+          # mainブランチ（またはデフォルトブランチ）と現在のコミット（HEAD）との差分を取得
+          web_changed=$(git diff --name-only origin/main...HEAD | grep -E '^apps/web/' || echo "")
+          api_changed=$(git diff --name-only origin/main...HEAD | grep -E '^apps/api/' || echo "")
 
-          echo "web_changed: ${web_changed}"
-          echo "api_changed: ${api_changed}"
+          {
+            echo "web_changed<<EOF"
+            echo "$web_changed"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+          {
+            echo "api_changed<<EOF"
+            echo "$api_changed"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Cache Next.js build
         if: ${{ steps.detect_changes.outputs.web_changed != '' }}
