--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,10 @@ jobs:
 
       - name: Lint, Build, Type-Check Web
         run: |
-          npm run lint
-          npm run build
+          npm run lint &
+          npm run build &
           npm run type-check
+          wait
 
   api-ci:
     needs: prepare
@@ -91,6 +92,7 @@ jobs:
 
       - name: Lint, Build, Type-Check API
         run: |
-          npm run lint
-          npm run build
+          npm run lint &
+          npm run build &
           npm run type-check
+          wait
