--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,10 +65,9 @@ jobs:
 
       - name: Lint, Build, Type-Check Web
         run: |
-          npm run lint &
-          npm run build &
-          npm run type-check
-          wait
+          time npm run lint
+          time npm run build
+          time npm run type-check
 
   api-ci:
     needs: prepare
