--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,11 +54,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Cache Next.js build
+        id: cache-next
+        uses: actions/cache@v4
+        with:
+          path: ${{ github.workspace }}/apps/web/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
       - name: Lint, Build, Type-Check Web
         run: |
-          npm run lint
-          npm run build
+          npm run lint &
+          npm run build &
           npm run type-check
+          wait
 
   api-ci:
     needs: prepare
@@ -82,6 +92,7 @@ jobs:
 
       - name: Lint, Build, Type-Check API
         run: |
-          npm run lint
-          npm run build
+          npm run lint &
+          npm run build &
           npm run type-check
+          wait
