--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:e2e": "npx playwright test"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@playwright/test": "^1.50.1",
     "@repo/eslint-config": "^1.0.0",
     "@types/eslint__eslintrc": "^2.1.2",
+    "@types/node": "^22.13.5",
     "@types/react": "19.0.10",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
