--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      - name: build
+        run: npm run build
+
       - name: Run Playwright tests
         run: npm run test:e2e
 
