--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -39,5 +39,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: ${{ github.workspace }}/apps/web/playwright-report/
           retention-days: 30
