--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "npm run lint -w apps",
-    "build": "npm run build -w apps"
+    "build": "npm run build -w apps",
+    "dev": "npm run dev -w apps/api & npm run dev -w apps/web"
   },
   "keywords": [],
   "author": "",
