--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "build": "nest build",
     "lint": "eslint",
     "type-check": "tsc --noEmit"
