--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "npm run lint -w apps",
     "build": "npm run build -w apps",
+    "start": "npm run start -w apps/api & npm run start -w apps/web",
     "dev": "npm run dev -w apps/api & npm run dev -w apps/web"
   },
   "keywords": [],
