nestサーバーをバックグラウンド起動

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -36,9 +36,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
 
+      - name: Run Api Start
+        run: npm run start -w apps/api &
+
       - name: Run Playwright tests
         run: |
-          npm run start -w apps/api
           npm run build -w apps/web
           npm run start -w apps/web
           npm run test:e2e -w e2e
