APIを網羅したe2eのCI環境構築 (#11)
* scriptにdev追加

* lintルール更新

* catsのAPI繋ぎ込み

* api繋ぎ込み箇所のe2e検証

* e2eワークスペース作成

* CI更新

* step修正

* 検証

* step修正

* 検証

* nestサーバーをバックグラウンド起動

* step修正

* イベントからpull_request削除

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "npm run lint -w apps",
-    "build": "npm run build -w apps"
+    "build": "npm run build -w apps",
+    "start": "npm run start -w apps/api & npm run start -w apps/web",
+    "dev": "npm run dev -w apps/api & npm run dev -w apps/web"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +17,8 @@
   "workspaces": [
     "docs",
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "e2e"
   ],
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.6",
