--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,22 +1,15 @@
-name: E2e Tests
+name: E2E Tests
 on:
   schedule:
-    - cron: "45 18 * * 1-5"
+    - cron: "45 09 * * 1-5" # UTCなので、日本時間で18:45
   workflow_dispatch:
   push:
     branches: [main]
-
-defaults:
-  run:
-    working-directory: apps/web
 
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: apps/web
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -27,17 +20,33 @@ jobs:
         run: npm ci
 
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: |
+          cd e2e
+          npx playwright install --with-deps
 
-      - name: build
-        run: npm run build
+      - name: Cache Next.js build
+        id: cache-next
+        uses: actions/cache@v4
+        with:
+          path: ${{ github.workspace }}/apps/web/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
+
+      - name: Run Api Start
+        run: npm run start -w apps/api &
+
+      - name: Run Web Start
+        run: |
+          npm run build -w apps/web
+          npm run start -w apps/web &
 
       - name: Run Playwright tests
-        run: npm run test:e2e
+        run: npm run test:e2e -w e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
-          path: ${{ github.workspace }}/apps/web/playwright-report/
+          path: ${{ github.workspace }}/e2e/playwright-report/
           retention-days: 30
