--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,11 @@
 api:
   - change-files:
-      - any-glob-to-any-file apps/api/**
+      - any-glob-to-any-file: apps/api/**
 
 web:
   - change-files:
-      - any-glob-to-any-file apps/web/**
+      - any-glob-to-any-file: apps/web/**
 
 docs:
   - change-files:
-      - any-glob-to-any-file docs/**
+      - any-glob-to-any-file: docs/**
