--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,11 @@
 api:
-  - change-files:
+  - changed-files:
       - any-glob-to-any-file: apps/api/**
 
 web:
-  - change-files:
+  - changed-files:
       - any-glob-to-any-file: apps/web/**
 
 docs:
-  - change-files:
+  - changed-files:
       - any-glob-to-any-file: docs/**
